change in base.html

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -158,7 +158,7 @@
 
 .sidebar {
   width: 220px;
-  background: #1a1a1a;
+  background: #040a64;
   padding: 20px;
   height: 70vh; /* Hero Section jitni hi height milegi */
   display: flex;
@@ -281,7 +281,7 @@
     text-align: center;
 }
 
-<<<<<<< HEAD
+
 .product-card img {
     width: 100%;
     height: 200px;
@@ -312,9 +312,7 @@
     object-fit: cover;
     margin-bottom: 10px;
 }
-=======
 
->>>>>>> 25a901325f9df1c8a7c481841b53ec5cd8bc5650
   </style>
   {% block css %}{% endblock %}
 </head>
