--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -282,9 +282,12 @@
     gap: 20px;
     padding: 20px;
 }
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Adjust min width here */
+  gap: 1.5rem;
+}
 
-
-body { font-family: 'Space Grotesk', sans-serif; }
 .course-card {
     background-color: white;
     border: 2px solid #007bff; /* Blue outline */
@@ -319,16 +322,6 @@ body { font-family: 'Space Grotesk', sans-serif; }
     padding: 20px;
 }
 
-.ad-left {
-    left: 0;  /* Stick to the left */
-    top: 30%;
-}
-
-.ad-right {
-    right: 0; /* Stick to the right */
-    top: 30%;
-}
-
 .ad-placement {
     position: fixed;
     width: 15vw;
@@ -342,6 +335,16 @@ body { font-family: 'Space Grotesk', sans-serif; }
     text-align: center;
     color: white;
     transition: transform 0.2s ease-out;
+}
+
+.ad-left {
+    left: 0;  /* Stick to the left */
+    top: 30%;
+}
+
+.ad-right {
+    right: 0; /* Stick to the right */
+    top: 30%;
 }
 .product-card {
     background-color: white;
