--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -30,17 +30,18 @@
     }
     .header {
   width: 100%;
-  background: linear-gradient(to right, #001f3f, #0074D9, #ffffff);
+  background: linear-gradient(to right, #ffffff, #0074D9,#001f3f);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   position: relative;
   z-index: 100;
-}
+  }
 
     .top-nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 10px 14px;
+      height: 70px;
     }
     .logo {
       margin-right: 20px;
@@ -49,6 +50,7 @@
     .logo img{
       height: 150px;
       width: auto;
+      margin-top: 33px;
     }
     .search-bar {
       flex: 1;
@@ -75,7 +77,7 @@
       color: #2f6fed;
       font-weight: bold;
       margin-bottom: 5px;
-    }
+    } 
     .cart-container {
       display: flex;
       align-items: center;
@@ -87,7 +89,7 @@
     .nav-links {
       display: flex;
       justify-content: center;
-      background: linear-gradient(to right, #001f3f, #0074D9, #ffffff);
+      background: linear-gradient(to right,  #ffffff, #0074D9,#001f3f);
       padding: 0;
       position: relative;
       z-index: 100;
