--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -79,7 +79,7 @@
     <h2>&nbsp;&nbsp;&nbsp;Featured Guides</h2>
     <div class="product-grid">
         <div class="product-card">
-            <a href = "otto.html"><img src="{% static 'images/product1.jpg' %}" alt="Ottobot"></a>
+            <a href = "/otto"><img src="{% static 'images/product1.jpg' %}" alt="Ottobot"></a>
             <h3>Ottobot</h3>
         </div>
         <div class="product-card">
