--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="kit-image">
-              <img src="{% static 'images/kit.png' %}" alt="Robotics Kit 3">
+              <img src="{% static 'images/kit.jpg' %}" alt="Robotics Kit 3">
             </div>
         </div>
 
@@ -71,7 +71,7 @@
                 </ul>
             </div>
             <div class="kit-image">
-                <img src="services.png" alt="Services Image">
+              <img src="{% static 'images/services.jpg' %}" alt="Services">
             </div>
         </div>
 
@@ -86,7 +86,7 @@
                 </ul>
             </div>
             <div class="kit-image">
-                <img src="content.png" alt="Content Image">
+              <img src="{% static 'images/content.jpg' %}" alt="Services">
             </div>
         </div>
     </div>
@@ -99,28 +99,28 @@
         <div class="category-card">
             <h3 style = "font-size:x-large;">Robotics</h3>
             <img src="{% static 'images/Robotics.png' %}" alt="Electronics">
-            <p style = "font-size: 17px; font-family:'Times New Roman', Times, serif">
+            <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
                 Robotics projects involve designing, building, and programming robots to perform tasks or solve problems using sensors, actuators, and controllers. They range from educational prototypes to complex industrial systems.
             </p>
         </div>
         <div class="category-card">
             <h3 style = "font-size:x-large">Biotech</h3>
             <img src="{% static 'images/health.png' %}" alt="Health">
-            <p style = "font-size: 17px; font-family:'Times New Roman', Times, serif">
+            <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
                 Biotechnology is the application of biological systems, organisms, or derivatives to develop technologies and products that improve health, agriculture, and industry. It combines biology with fields like genetics, biochemistry, and engineering to innovate in medicine, food production, and environmental sustainability.
             </p>
         </div>
         <div class="category-card">
             <h3 style = "font-size:x-large">Home Automation</h3>
             <img src="{% static 'images/home.png' %}" alt="Home">
-            <p style = "font-size: 17px; font-family:'Times New Roman', Times, serif">
+            <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
                 Home automation projects involve creating systems that control household functions like lighting, temperature, security, and appliances automatically or remotely. These projects often use sensors, smart devices, and automation platforms to improve convenience, energy efficiency, and security.
             </p>
         </div>
         <div class="category-card">
             <h3 style = "font-size:x-large">Drones</h3>
             <img src="{% static 'images/drones.png' %}" alt="Books">
-            <p style = "font-size: 17px; font-family:'Times New Roman', Times, serif">Drone projects involve designing and programming UAVs for tasks like surveillance, delivery, or mapping using hardware and software for autonomous or remote flight.</p>
+            <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Drone projects involve designing and programming UAVs for tasks like surveillance, delivery, or mapping using hardware and software for autonomous or remote flight.</p>
         </div>
     </div>
 </section>
@@ -130,26 +130,22 @@
   <h2 style = "font-size: xx-large;">&nbsp;&nbsp;&nbsp;Featured Guides</h2>
     <div class="product-grid">
         <div class="product-card">
-<<<<<<< HEAD
             <a href = "../templates/otto.html"><img src="{% static 'images/product1.jpg' %}" alt="Ottobot"></a>
-=======
-            <a href = "/otto"><img src="{% static 'images/product1.jpg' %}" alt="Ottobot"></a>
->>>>>>> 8b687ab833e4240e3a546931272bc3b7672215be
-            <h3>Ottobot</h3>
+            <h3 style = "font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight:500;">Ottobot</h3>
         </div>
         <div class="product-card">
             <img src="{% static 'images/product2.jpg' %}" alt="Bionic Hand">
-            <h3>Bionic Hand</h3>
+            <h3 style = "font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight:500;">Bionic Hand</h3>
             
         </div>
         <div class="product-card">
             <img src="{% static 'images/product3.jpg' %}" alt="Product 3">
-            <h3>Solar detector</h3>
+            <h3 style = "font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight:500;">Solar detector</h3>
             
         </div>
         <div class="product-card">
             <img src="{% static 'images/product4.jpg' %}" alt="Product 4">
-            <h3>Asterbot</h3>
+            <h3 style = "font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight:500;">Asterbot</h3>
             
         </div>
     </div>
