--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -113,24 +113,24 @@
 
   <!-- Technology Domains-->
   <section class="categories" id="categories">
-    <h2 style = "font-size: xx-large;">Technology Domains</h2>
+    <h2 style = "font-size: xx-large; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">Technology Domains</h2>
     <div class="category-grid">
         <div class="category-card">
-            <h3 style = "font-size:x-large;">Robotics</h3>
+            <h3 style = "font-size:x-large; font-family:Verdana, Geneva, Tahoma, sans-serif;">Robotics</h3>
             <img src="{% static 'images/Robotics.png' %}" alt="Electronics">
             <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
                 Robotics projects involve designing, building, and programming robots to perform tasks or solve problems using sensors, actuators, and controllers. They range from educational prototypes to complex industrial systems.
             </p>
         </div>
         <div class="category-card">
-            <h3 style = "font-size:x-large">Biotech</h3>
+            <h3 style = "font-size:x-large;  font-family:Verdana, Geneva, Tahoma, sans-serif">Biotech</h3>
             <img src="{% static 'images/health.png' %}" alt="Health">
             <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
                 Biotechnology is the application of biological systems, organisms, or derivatives to develop technologies and products that improve health, agriculture, and industry. It combines biology with fields like genetics, biochemistry, and engineering to innovate in medicine, food production, and environmental sustainability.
             </p>
         </div>
         <div class="category-card">
-            <h3 style = "font-size:x-large">Home Automation</h3>
+            <h3 style = "font-size:x-large; font-family:Verdana, Geneva, Tahoma, sans-serif">Home Automation</h3>
             <img src="{% static 'images/home.png' %}" alt="Home">
             <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
                 Home automation projects involve creating systems that control household functions like lighting, temperature, security, and appliances automatically or remotely. These projects often use sensors, smart devices, and automation platforms to improve convenience, energy efficiency, and security.
@@ -146,7 +146,7 @@
 
 <!-- Featured Products -->
 <section class="featured-products">
-  <h2 style = "font-size: xx-large;">&nbsp;&nbsp;&nbsp;Featured Guides</h2>
+  <h2 style = "font-size: xx-large; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">&nbsp;&nbsp;&nbsp;Featured Guides</h2>
     <div class="product-grid">
         <div class="product-card">
             <a href = "../templates/otto.html"><img src="{% static 'images/product1.jpg' %}" alt="Ottobot"></a>
