--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -119,14 +119,14 @@
             <h3 style = "font-size:x-large; font-family:Verdana, Geneva, Tahoma, sans-serif;">Robotics</h3>
             <img src="{% static 'images/Robotics.png' %}" alt="Electronics">
             <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
-                Robotics projects involve designing, building, and programming robots to perform tasks or solve problems using sensors, actuators, and controllers. They range from educational prototypes to complex industrial systems.
+              Robotics projects involve creating robots with sensors, actuators, and controllers to complete tasks, from prototypes to industrial systems.
             </p>
         </div>
         <div class="category-card">
             <h3 style = "font-size:x-large;  font-family:Verdana, Geneva, Tahoma, sans-serif">Biotech</h3>
             <img src="{% static 'images/health.png' %}" alt="Health">
             <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
-                Biotechnology is the application of biological systems, organisms, or derivatives to develop technologies and products that improve health, agriculture, and industry. It combines biology with fields like genetics, biochemistry, and engineering to innovate in medicine, food production, and environmental sustainability.
+              Biotechnology applies biological systems to develop innovations in health, agriculture, and industry, blending biology with genetics, biochemistry, and engineering.
             </p>
         </div>
         <div class="category-card">
