add ad to home page

--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -111,6 +111,40 @@
     </div>
 </section>
 
+
+<!-- Ad placement -->
+<section class="content-box">
+  <div class="ad-container" onmouseout="startScroll()">
+      <div class="ad-slider" id="adSlider">
+          <div class="ad">
+              <img src="{% static 'images/bionichand.jpeg' %}" alt="Bionic Hand">
+              <p class="ad-title">Bionic Hand</p>
+          </div>
+
+          <div class="ad">
+              <img src="{% static 'images/asterbot.webp' %}" alt="Asterbot">
+              <p class="ad-title">Asterbot</p>
+          </div>
+
+          <div class="ad">
+              <img src="{% static 'images/roboticarm.webp' %}" alt="Robotic Arm">
+              <p class="ad-title">Robotic Arm</p>
+          </div>
+
+          <div class="ad">
+              <img src="{% static 'images/selfbalancing.webp' %}" alt="Self-Balancing Robot">
+              <p class="ad-title">Self-Balancing Robot</p>
+          </div>
+
+          <div class="ad">
+              <img src="{% static 'images/quadrobot.webp' %}" alt="Quadruped Robot">
+              <p class="ad-title">Quadruped Robot</p>
+          </div>
+      </div>
+  </div>
+</section>
+
+
   <!-- Technology Domains-->
   <section class="categories" id="categories">
     <h2 style = "font-size: xx-large; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">Technology Domains</h2>
