updating home page - hero section

--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -21,7 +21,7 @@
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="{% static 'images/he2.jpeg' %}" alt="Robotics Kit 1">
+        <img src="{% static 'images/he1.png' %}" alt="Robotics Kit 1">
         <div class="shadow-box"></div>
         <div class="overlay">
           <h2>Seamless Connectivity, Anytime, Anywhere</h2>
