--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -53,15 +53,17 @@
       margin-top: 33px;
     }
     .search-bar {
-      flex: 1;
-      text-align: center;
-    }
-    .search-bar input {
-      width: 50%;
-      padding: 6px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
+    flex: 1;
+    text-align: center;
+}
+
+.search-bar input {
+    width: 50%;
+    padding: 6px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 3px 18px #3643ff; /* Blue shadow */
+}
+
     .right-nav {
       display: flex;
       align-items: center;
@@ -89,14 +91,14 @@
     .nav-links {
       display: flex;
       justify-content: center;
-      background: linear-gradient(to right,  #ffffff, #0074D9,#001f3f);
+      background: color yellow;
       padding: 0;
       position: relative;
       z-index: 100;
     }
     .nav-links a {
       text-decoration: none;
-      color: #ffffff;
+      color: #0011ff;
       font-weight: bold;
       margin: 0 15px;
       display: inline-flex;
@@ -173,7 +175,7 @@
 
 .sidebar {
   width: 220px;
-  background: #040a64;
+  background: #ffffff;
   padding: 20px;
   height: 70vh; /* Hero Section jitni hi height milegi */
   display: flex;
@@ -183,7 +185,7 @@
 
 
 .sidebar h2 {
-  color: white;
+  color: #0011ff;
   font-size: 22px;
   margin-bottom: 15px;
   text-transform: uppercase;
@@ -202,7 +204,7 @@
 
 .sidebar ul li a {
   text-decoration: none;
-  color: white;
+  color: #0011ff;
   font-size: 18px;
   display: block;
   transition: 0.3s;
