--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -154,7 +154,7 @@
             <h3 style = "font-size:x-large; font-family:Verdana, Geneva, Tahoma, sans-serif">Home Automation</h3>
             <img src="{% static 'images/home_auto.png' %}" alt="Home">
             <p style = "font-size: 17px; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">
-                Home automation projects involve creating systems that control household functions like lighting, temperature, security, and appliances automatically or remotely. These projects often use sensors, smart devices, and automation platforms to improve convenience, energy efficiency, and security.
+              Home automation projects create systems to control lighting, temperature, security, and appliances remotely or automatically, enhancing convenience, efficiency, and security.
             </p>
         </div>
         <div class="category-card">
