update home page

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -256,7 +256,7 @@
   top: 50%;
   left: 5%;
   transform: translateY(-50%);
-  background: rgba(2, 39, 119, 0.747);
+  background: #e3e3e3cc;
   width: 400px;
   height: 350px;
   border-radius: 10px;
@@ -267,7 +267,7 @@
   text-align: center;
   padding: 10px;
   z-index: 1;
-  box-shadow: 20px 20px 40px rgb(0, 217, 255);
+  box-shadow: 20px 20px 80px rgb(3, 3, 3);
 }
 
 
@@ -278,15 +278,18 @@
   margin-bottom: 5px;
   font-weight: bold;
   font-family: 'Times New Roman';
-  color: rgb(255, 255, 255);
+  color: #314ffc;
+  text-align: left;
 }
 
 /* Paragraph Below h2 */
 .overlay p {
-  font-size: 1rem;
-  font-weight: bold;
-  color: rgb(255, 255, 255);
+    font-size: 1rem;
+    font-weight: bold;
+    color: #000;
+    text-align: left; /* Left align kar diya */
 }
+
 
 /* Hero Content */
 .hero-content {
@@ -489,7 +492,6 @@
 .kit-section {
     text-align: center;
     padding: 50px 20px;
-    background-color: #f8f9fa; /* Adjust to match your theme */
 }
 
 .section-title {
@@ -500,7 +502,6 @@
 }
 
 .kit-section {
-    background-color: #f8f9fa; /* Light gray background */
     padding: 40px;
 }
 
