--- a/Eapp/templates/otto.html
+++ b/Eapp/templates/otto.html
@@ -638,15 +638,13 @@
     }
 
     .project-title {
-    margin-top: 8px;
-    font-size: 16px;
-    font-weight: bold;
-    background: linear-gradient(to right, #007BFF, #00C6FF);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: #007BFF; /* Fallback color for non-webkit browsers */
-}
+        margin-top: 8px;
+        font-size: 16px;
+        font-weight: bold;
+        background: linear-gradient(to right, #007BFF, #00C6FF);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 
     @keyframes scrollProjects {
         from {
@@ -797,6 +795,12 @@
         transform: scale(1.02); /* Slight zoom effect */
     }
 </style>
+
+    </div>
+
+    <footer>
+        <p>&copy; 2025 PHN Technology. All rights reserved.</p>
+    </footer>
 
     {% endblock %}
 </body>
