--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -134,7 +134,7 @@
 
   <!-- Technology Domains-->
   <section class="categories" id="categories">
-    <h2 style = "font-size: xx-large; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">Technology Domains</h2>
+    <h2 style = "font-size: xx-large; margin-bottom: 10px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">Technology Domains</h2>
     <div class="category-grid">
         <div class="category-card">
             <h3 style = "font-size:x-large; font-family:Verdana, Geneva, Tahoma, sans-serif;">Robotics</h3>
