remive ads from home page

--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -11,7 +11,12 @@
         <ul>
           <li><a href="#">Bionic Hand</a></li>
           <li><a href="#">Aster Robot</a></li>
-          <li><a href="#">Dobot</a></li>
+          <li><a href="#">Otto Robot</a></li>
+          <li><a href="#">Dog Head</a></li>
+          <li><a href="#">Home Automation</a></li>
+          <li><a href="#">Humonoid Robot</a></li>
+          <li><a href="#">Obstacle Avoidance Car</a></li>
+          <li><a href="#">Real Time Clock</a></li>
         </ul>
       </div>
 
@@ -101,34 +106,6 @@
             </div>
         </div>
     </div>
-</section>
-
-
-<!-- Ad placement -->
-<section class="content-box">
-  <div class="ad-container" onmouseout="startScroll()">
-      <div class="ad-slider" id="adSlider">
-          <div class="ad">
-              <img src="{% static 'images/ad1.webp' %}" alt="Bionic Hand">
-          </div>
-
-          <div class="ad">
-              <img src="{% static 'images/ad2.jpg' %}" alt="Asterbot">
-          </div>
-
-          <div class="ad">
-              <img src="{% static 'images/ad3.jpg' %}" alt="Robotic Arm">
-          </div>
-
-          <div class="ad">
-              <img src="{% static 'images/ad4.jpg' %}" alt="Self-Balancing Robot">
-          </div>
-
-          <div class="ad">
-              <img src="{% static 'images/ad1.webp' %}" alt="Quadruped Robot">
-          </div>
-      </div>
-  </div>
 </section>
 
 
