update hero section

--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -26,13 +26,13 @@
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="{% static 'images/he1.png' %}" alt="Robotics Kit 1">
-        <div class="shadow-box"></div>
+        <img src="{% static 'images/phnhero1.png' %}" alt="Robotics Kit 1">
+        <!-- <div class="shadow-box"></div>
         <div class="overlay">
           <h2>Seamless Connectivity, Anytime, Anywhere</h2>
           <p>Extend your reach with our selection of</p>
           <p>long-range wireless solutions</p>
-        </div>
+        </div> -->
       </div>
       <div class="swiper-slide">
         <img src="{% static 'images/hero2.webp' %}" alt="Robotics Kit 2">
