--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -186,7 +186,7 @@
     border-radius: 10px;
     flex-direction: column;
     justify-content: flex-start;
-    margin-left: 26px;
+    margin-left: 63px;
     border-color: black;
     border-right: 10px;
 }
@@ -229,7 +229,7 @@
     height: 70vh;
     overflow: hidden;
     background-color: black;
-    margin-right: 20px;
+    margin-right: 75px;
     border-radius: 10px;
 }
 
@@ -526,6 +526,58 @@
     height: auto;
     border-radius: 10px;
 }
+
+
+/*Ad placement*/
+
+.ad-container {
+        width: 100%;
+        height: 250px;
+        overflow: hidden;
+        padding: 10px;
+        position: relative;
+        white-space: nowrap;
+    }
+
+    .ad-slider {
+        display: flex;
+        gap: 20px;
+        animation: scrollProjects 10s linear infinite;
+    }
+
+    .ad {
+    flex: 0 0 auto;
+    width: 523px; /* Thoda chhota kiya */
+    height: 230px; /* Ad container se thoda kam */
+    text-align: center;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.ad img {
+    width: 100%; /* Full width */
+    height: 100%; /* Ad ke container ke andar fit karega */
+    object-fit: cover; /* Image stretch na ho, properly fit ho */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+    @keyframes scrollProjects {
+        from {
+            transform: translateX(0);
+        }
+        to {
+            transform: translateX(-100%);
+        }
+    }
+
+
+
+
 
 /* Footer Styling */
 footer {
